--- a/microservices/product-inventory.yaml
+++ b/microservices/product-inventory.yaml
@@ -14,10 +14,44 @@ spec:
       labels:
         app: product-inventory
         version: v1
-    spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 2000
       containers:
       - name: product-inventory
         image: rslim087/product-inventory:1.0.0
+        imagePullPolicy: IFNotPresent
+        ports:
+        - containerPort: 3002
+          name: http
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop: ["ALL"]
+        resources:
+          requests:
+            cpu: 50m
+            memory: 64Mi
+          limits:
+            cpu: 250m
+            memory: 128Mi
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3002
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 3002
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        envFrom:
+        - configMapRef:
+            name: ecommerce-config
 ---
 apiVersion: v1
 kind: Service
