--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'microservices/**'
+      - 'istio/**'
+      - '.github/workflows/ci.yml'
 
 permissions:
   contents: 'read'
