--- a/microservices/ecommerce-ui.yaml
+++ b/microservices/ecommerce-ui.yaml
@@ -15,20 +15,44 @@ spec:
         app: ecommerce-ui
         version: v1
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 2000
       containers:
       - name: ecommerce-ui
         image: rslim087/ecommerce-ui:latest
+        imagePullPolicy: IFNotPresent
         ports:
         - containerPort: 4000
-        env:
-        - name: REACT_APP_PROFILE_API_HOST
-          value: "http://profile-management"
-        - name: REACT_APP_PRODUCT_API_HOST
-          value: "http://product-catalog"
-        - name: REACT_APP_INVENTORY_API_HOST
-          value: "http://product-inventory"
-        - name: REACT_APP_ORDER_API_HOST
-          value: "http://order-management"
+          name: http
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop: ["ALL"]
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 500m
+            memory: 256Mi
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 4000
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 4000
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        envFrom:
+        - configMapRef:
+            name: ecommerce-config
         - name: REACT_APP_SHIPPING_API_HOST
           value: "http://shipping-and-handling"
         - name: REACT_APP_CONTACT_API_HOST
