--- a/microservices/product-catalog.yaml
+++ b/microservices/product-catalog.yaml
@@ -15,11 +15,44 @@ spec:
         app: product-catalog
         version: v1
     spec:
+      securityContext:
+        runAsNonRoot: true
+        runAsUser: 1000
+        fsGroup: 2000
       containers:
       - name: product-catalog
         image: rslim087/product-catalog:1.0.0
+        imagePullPolicy: IFNotPresent
         ports:
         - containerPort: 3001
+          name: http
+        securityContext:
+          allowPrivilegeEscalation: false
+          readOnlyRootFilesystem: true
+          capabilities:
+            drop: ["ALL"]
+        resources:
+          requests:
+            cpu: 50m
+            memory: 64Mi
+          limits:
+            cpu: 250m
+            memory: 128Mi
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3001
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 3001
+          initialDelaySeconds: 5
+          periodSeconds: 5
+        envFrom:
+        - configMapRef:
+            name: ecommerce-config
 ---
 apiVersion: v1
 kind: Service
